[gd_scene load_steps=3 format=3 uid="uid://hnumxyq8v0gm"]

[ext_resource type="Script" uid="uid://dtnutif5rxiuw" path="res://Scripts/c_password.gd" id="1_5b8hp"]
[ext_resource type="Theme" uid="uid://ccq60t47rgtuy" path="res://Themes/start_menu_theme.tres" id="2_g7dl2"]

[node name="CPasswordMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5b8hp")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 2000)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_g7dl2")

[node name="Verify" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -95.5
offset_right = 239.0
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Verify"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_g7dl2")
text = "Enter verification code sent to email below:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LineEdit" type="LineEdit" parent="Verify"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_g7dl2")

[node name="Control" type="Control" parent="Verify"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="verify" type="Button" parent="Verify"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_g7dl2")
text = "Verify"

[node name="cancel" type="Button" parent="Verify"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_g7dl2")
text = "Cancel"

[node name="PasswordChange" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -95.5
offset_right = 239.0
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2

[node name="Password" type="Label" parent="PasswordChange"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_g7dl2")
text = "Enter new password"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LineEdit" type="LineEdit" parent="PasswordChange"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_g7dl2")

[node name="Control" type="Control" parent="PasswordChange"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="confim" type="Button" parent="PasswordChange"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_g7dl2")
text = "Confirm"

[node name="cancel" type="Button" parent="PasswordChange"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_g7dl2")
text = "Cancel"

[connection signal="pressed" from="Verify/verify" to="." method="_on_verify_pressed"]
[connection signal="pressed" from="Verify/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PasswordChange/confim" to="." method="_on_confim_pressed"]
[connection signal="pressed" from="PasswordChange/cancel" to="." method="_on_cancel_pressed"]
